--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -6,11 +6,6 @@
 
 body{
     background-color: paleturquoise;
+    height: 100vh;
 }
 
-.menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh
-}
