add env for atlas

--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -12,7 +12,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
+	/* height: 100vh; */
 	margin: -20px 0 50px;
 }
 
@@ -253,8 +253,8 @@ footer a {
 
 .wrong{
 	color: red;
-	position: absolute;
-	bottom: 95px;
+	
+	
 }
 .wrong-register{
 	color:red
