--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,11 +1,21 @@
 *{
-    padding: 0;
-    margin: 0;
+    /* padding: 0;
+    margin: 0; */
     box-sizing:border-box;
 }
 
-body{
+/* body{
     background-color: paleturquoise;
     height: 80vh;
-}
+} */
 
+body {
+    height: 100vh;
+	background: #f6f5f7;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	
+	
+}
