--- a/client/src/css/genre.css
+++ b/client/src/css/genre.css
@@ -3,3 +3,12 @@
     margin: 5px;
     
 }
+
+.genre-btns{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    height: 65vh;
+
+}
