resposinve for mobile

--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -17,6 +17,8 @@
     
 }
 
-/* @media screen and (max-width: 550px) {
-      
-} */
+@media screen and (max-width: 700px) {
+      .hide{
+          display: none;
+      }
+}
