--- a/client/src/components/css/answer.css
+++ b/client/src/components/css/answer.css
@@ -26,3 +26,14 @@
     margin: 25px;
 }
 
+
+@media screen and (max-width: 550px) {
+    .a1,.a2,.a3,.a4{ 
+        font-size: 10px;
+        height:75px;
+        padding: 10px 20px;
+        width: 100%;
+        margin: 5px;
+    }
+    
+}
